# bsky-aibot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/aibot_bsky/: __init__.py  app.py
src/bsky_aibot/: app.py
tests/: test_app.py
