[project]
name = "aibot-bsky"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "xhiroga", email = "xhiroga@users.noreply.github.com" }
]
dependencies = [
    "atproto~=0.0.16",
    "python-dotenv~=1.0.0",
    "openai~=0.27.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = { cmd = "python ./src/aibot_bsky/app.py" }
