[project]
name = "aibot-bsky"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "xhiroga", email = "xhiroga@users.noreply.github.com" }
]
dependencies = [
    "atproto~=0.0.16",
    "python-dotenv~=1.0.0",
    "openai~=0.27.8",
    "python-dateutil~=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = { cmd = "python ./src/aibot_bsky/app.py" }
test = { cmd = "pytest" }
